--- a/public/css/card.css
+++ b/public/css/card.css
@@ -72,7 +72,7 @@
     border-right: 1px solid #ddd;
     border-left: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
-    height: 78px;
+    height: 80px;
     padding: 4px;
 }
 #comment_area{
@@ -84,4 +84,8 @@
   text-align: left;
   box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2) inset;
   box-sizing: border-box;
+}
+
+#chat{
+    padding: 0 0 80px 0;
 }
